--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="hero">
         <div class="hero-inner">
             <h1>Trilling Bowl 58</h1>
-            <h2>We get young people interested in gambling</h2>
+            <h2>We get young people interested gambling</h2>
             <a href="leaders.html" class="btn">Enter Site</a>
         </div>
     </section>
