--- a/answers.html
+++ b/answers.html
@@ -46,11 +46,11 @@
 
       <p class="question">1. How long will it take Reba McEntire to sing the National Anthem 
         before the game?</p> 
-      <p class="answer"><b>a.</b> 1 minute and 30 seconds or under (3 points)<br><b>b.</b> Over 1 minute and 30 seconds (3 points)</p>
+      <p class="answer"><b>a.</b> 1 minute and 30 seconds or under (3 points)<br><span style="background-color: lightgreen"><b>b.</b> Over 1 minute and 30 seconds (3 points)</span></p>
       <hr class="border-1"></p>
 
       <p class="question">2. Which player will be shown on TV first during the singing of the National Anthem?</p> 
-      <p class="answer"><b>a.</b> Patrick Mahomes (2 points)<br><b>b.</b> Brock Purdy (2 points)<br>
+      <p class="answer"><span style="background-color: lightgreen"><b>a.</b> Patrick Mahomes (2 points)<br></span><b>b.</b> Brock Purdy (2 points)<br>
         <b>c.</b> Neither player will be shown (3 points)</p>
         <hr class="border-1"></p>
 
@@ -67,7 +67,7 @@
       <hr class="border-1"></p>
       
       <p class="question">5. What will be the result of the coin toss be before the game?</p> 
-      <p class="answer"><b>a.</b> Heads (2 points)</span><br>
+      <p class="answer"><span style="background-color: lightgreen"><b>a.</b> Heads (2 points)</span><br>
       <b>b.</b> Tails (2 points)<br></p>
       <hr class="border-1"></p>
 
