--- a/answers.html
+++ b/answers.html
@@ -72,18 +72,18 @@
       <hr class="border-1"></p>
 
       <p class="question">6. Which head coach will be shown on TV first after the opening kickoff?</p> 
-      <p class="answer"><p class="answer"><b>a.</b> Andy Reid (2 points)<br><b>b.</b> Mike Shanahan (2 points)</p>
+      <p class="answer"><p class="answer"><b>a.</b> Andy Reid (2 points)<br><span style="background-color: lightgreen"><b>b.</b> Mike Shanahan (2 points)</span></p>
       <hr class="border-1"></p>
   
       <p class="question">7. What will be the first TV commercial after the opening kickoff? (all 4 points)</p> 
-      <p class="answer"><b>a.</b> Soft drink<br><b>b.</b> Beer<br><b>c.</b> Other food or restaurant<br><b>d.</b> Car<br><b>e.</b> Movie or TV show<br>
+      <p class="answer"><b>a.</b> Soft drink<br><b>b.</b> Beer<br><b>c.</b> Other food or restaurant<br><b>d.</b> Car<br><span style="background-color: lightgreen"><b>e.</b> Movie or TV show</span><br>
       <b>f.</b> Technology<br><b>g.</b> Streaming service<br><b>h.</b> PSA or another piece related to racial equity/social justice<br>
       <b>i.</b> Preview of Windward School baseball season<br>
       <b>j.</b> Something else</p>
       <hr class="border-1"></p>
  
       <p class="question">8. What will be the first offensive play from scrimmage after the opening kickoff?</p> 
-      <p class="answer"><b>a.</b> Run, including a sack (3 points)<br><b>b.</b> Pass (3 points)</p>
+      <p class="answer"><span style="background-color: lightgreen"><b>a.</b> Run, including a sack (3 points)</span><br><b>b.</b> Pass (3 points)</p>
       <hr class="border-1"></p>
        
      <p class="question">9. Which team will be the first to record a first down?</p> 
@@ -144,7 +144,7 @@
      <hr class="border-1"></p>
 
       <p class="question">21. What will be the primary color of Taylor Swift's top at the Super Bowl?</p> 
-      <p class="answer"><b>a.</b> Red (3 points)<br><b>b.</b> Black (5 points)<br>
+      <p class="answer"><b>a.</b> Red (3 points)<br><span style="background-color: lightgreen"><b>b.</b> Black (5 points)</span><br>
       <b>c.</b> White (6 points)<br><b>d.</b> Any other color (7 points)</p>
       <hr class="border-1"></p>
 
@@ -153,7 +153,7 @@
       <hr class="border-1"></p>
 
       <p class="question">23. What will Taylor Swift's hair style be at the Super Bowl?</p> 
-      <p class="answer"><b>a.</b> Hair Down (2 points)</span><br><b>b.</b> Hair Up (4 points)</p>
+      <p class="answer"><b>a.</b> Hair Down (2 points)</span><br><span style="background-color: lightgreen"><b>b.</b> Hair Up (4 points)</span></p>
       <hr class="border-1"></p>
       
       <p class="question">24. Which scoring play will be longer?</p> 
