--- a/answers.html
+++ b/answers.html
@@ -108,7 +108,7 @@
      <hr class="border-1"></p>
 
      <p class="question">14. What will be the first scoring play of the game?</p> 
-     <p class="answer"><b>a.</b> Field goal (2 points)<br><b>b.</b>Touchdown run (3 points)</span><br><b>c.</b> Touchdown pass (3 points)<br>
+     <p class="answer"><span style="background-color: lightgreen"><b>a.</b> Field goal (2 points)</span><br><b>b.</b>Touchdown run (3 points)</span><br><b>c.</b> Touchdown pass (3 points)<br>
      <b>d.</b> Anything else - kick return, defensive score, etc. (6 points)</p>
      <hr class="border-1"></p>
 
