--- a/leaders.html
+++ b/leaders.html
@@ -72,6 +72,11 @@
         </div>
         <div style="height:400px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font-family: sans-serif; font-size:102%; color: black; padding-left: 2%; font-weight:500; overflow:auto;"> 
         <!--  <div style="height:300px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font:16px/26px Georgia, Garamond, Serif;overflow:auto;"> --> 
+          
+          
+          <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 4:30 PM PST<hr class="border-1"></span>
+          Elke McGinley takes the first $20 payout winning the Squares game at the end of the first quarter<hr class="border-1">
+          Elke grew up in Austria and is now a rabid football fan, congratulations Elke!<hr class="border-1">
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 3:20 PM PST<hr class="border-1"></span>
           Welcome to Trilling Bowl 58, thank you for joining us!<hr class="border-1">
           We will provide regular updates in this text window<hr class="border-1">
