--- a/leaders.html
+++ b/leaders.html
@@ -74,9 +74,8 @@
         <!--  <div style="height:300px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font:16px/26px Georgia, Garamond, Serif;overflow:auto;"> --> 
           
           
-          <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 4:30 PM PST<hr class="border-1"></span>
-          Elke McGinley takes the first $20 payout winning the Squares game at the end of the first quarter<hr class="border-1">
-          Elke grew up in Austria and is now a rabid football fan, congratulations Elke!<hr class="border-1">
+          <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 4:50 PM PST<hr class="border-1"></span>
+          3rd player to throw a pass in the game results in #23 (Christian McCaffrey) scoring the game's first touchdown<hr class="border-1">
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 3:20 PM PST<hr class="border-1"></span>
           Welcome to Trilling Bowl 58, thank you for joining us!<hr class="border-1">
           We will provide regular updates in this text window<hr class="border-1">
