--- a/answers.html
+++ b/answers.html
@@ -100,7 +100,7 @@
       <hr class="border-1"></p>
       
       <p class="question">12. How many different players will attempt a pass during the game?</p> 
-      <p class="answer"><b>a.</b> Two or fewer players (2 points)<br><b>b.</b> Three or more players (4 points)</p>
+      <p class="answer"><b>a.</b> Two or fewer players (2 points)<br><span style="background-color: lightgreen"><b>b.</b> Three or more players (4 points)</span></p>
       <hr class="border-1"></p>
  
       <p class="question">13. Will the game be tied at any point other than 0-0?</p> 
@@ -114,7 +114,7 @@
 
      <p class="question">15. What will be the jersey number of the first player to score a touchdown? (touchdown pass=receiver)</p> 
      <p class="answer"><b>a.</b> Jersey #19 or below (Mahomes, Pacheco, Purdy, Samuel, Aiyuk) (5 points)<br>
-     <b>b.</b> Above Jersey #19 (Kelce, Watson, McCaffrey, Kittle) (5 points)<br>
+      <span style="background-color: lightgreen"><b>b.</b> Above Jersey #19 (Kelce, Watson, McCaffrey, Kittle) (5 points)</span><br>
      <hr class="border-1"></p>
      
      <p class="question">16. What will be shown on the TV broadcast exactly at sundown in Las Vegas, at 5:17 PM Pacific Time? (all 4 points)</p> 
