--- a/answers.html
+++ b/answers.html
@@ -149,7 +149,7 @@
       <hr class="border-1"></p>
 
       <p class="question">22. What color lipstick will Taylor Swift wear at the Super Bowl?</p> 
-      <p class="answer"><b>a.</b> Red (2 points)<br><b>b.</b> Any other color or no lipstick (8 points)</p>
+      <p class="answer"><span style="background-color: lightgreen"><b>a.</b> Red (2 points)<br></span><b>b.</b> Any other color or no lipstick (8 points)</p>
       <hr class="border-1"></p>
 
       <p class="question">23. What will Taylor Swift's hair style be at the Super Bowl?</p> 
