--- a/leaders.html
+++ b/leaders.html
@@ -73,7 +73,8 @@
         <div style="height:400px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font-family: sans-serif; font-size:102%; color: black; padding-left: 2%; font-weight:500; overflow:auto;"> 
         <!--  <div style="height:300px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font:16px/26px Georgia, Garamond, Serif;overflow:auto;"> --> 
           
-          
+          <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 5:15 PM PST<hr class="border-1"></span>
+          Elke McGinley's daughter Karen Umland wins the Squares Game for the 2nd quarter. We are checking if Elke or Karen hacked into our website to change their square picks<hr class="border-1">   
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 4:50 PM PST<hr class="border-1"></span>
           3rd player to throw a pass in the game results in #23 (Christian McCaffrey) scoring the game's first touchdown<hr class="border-1">
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 3:20 PM PST<hr class="border-1"></span>
