--- a/answers.html
+++ b/answers.html
@@ -62,7 +62,7 @@
       
       <p class="question">4. Which number will be highest on Super Bowl Sunday?</p> 
       <p class="answer"><b>a.</b>Total points in the first quarter of the Super Bowl (4 points)<br>
-       <b>b.</b> Total runs in the UCLA-Oklahoma St. softball game (4 points)<br>
+        <span style="background-color: lightgreen"><b>b.</b> Total runs in the UCLA-Oklahoma St. softball game (4 points)</span><br>
          <b>c.</b> Both totals will be the same (8 points)<br></p>
       <hr class="border-1"></p>
       
