--- a/answers.html
+++ b/answers.html
@@ -87,7 +87,7 @@
       <hr class="border-1"></p>
        
      <p class="question">9. Which team will be the first to record a first down?</p> 
-     <p class="answer"><b>a.</b> Chiefs (2 points)<br><b>b.</b> 49ers (2 points)</span></p>
+     <p class="answer"><b>a.</b> Chiefs (2 points)<br><span style="background-color: lightgreen"><b>b.</b> 49ers (2 points)</span></p>
      <hr class="border-1"></p>
      
       <p class="question">10. How many points will be scored in the first half of the game?</p> 
