--- a/squares.html
+++ b/squares.html
@@ -41,13 +41,13 @@
       <h1 class="center">Super Bowl Squares</h1>
       <h2 style= "font-weight:normal; font-size:1.3em" class="center">Prizes awarded after each quarter based on last digit of each team's score</h2>
       <p class="lead" id="prizes">1st quarter end: $20<br> 2nd quarter end: $20 <br> 3rd quarter end: $20 <br> 4th quarter end: $40</p>
-     <!-- 
+     
       <div class="list-center-justify">
         <ul style="font-weight:bold">
-         <li> <span style="color: blue">1st Quarter Winner: Rowan Trollope <br>First time playing, he's from Canada, a very fast learner</span><hr class="border-1"></li>
-          <li>2nd Quarter: Burstein Kosner<br> They are in Phoenix at the game,which<br>gives them an advantage<hr class="border-1"></li>
-          <li><span style="color: blue">3rd Quarter Winner: Jonathan Groff<br>Has a history of winning sports bets</span><hr class="border-1"></li>
-          <li>4th Quarter Winner: Burstein Kosner again!! Checking to see if they hacked into the game</span><hr class="border-1"></li> 
+         <li> <span style="color: blue">1st Quarter Winner: Elke McGinley</span><hr class="border-1"></li>
+          <li><span style="color: blue">2nd Quarter: Karen Umland</span><hr class="border-1"></li>
+          <li><span style="color: blue">4th Quarter Winner: Karen Umland (again!)</span><hr class="border-1"></li>
+          <li><span style="color: blue">4th Quarter Winner: TBD</span><hr class="border-1"></li> 
         </ul> 
         </div>
       -->
