--- a/squares.html
+++ b/squares.html
@@ -44,10 +44,10 @@
      
       <div class="list-center-justify">
         <ul style="font-weight:bold">
-         <li> <span style="color: blue">1st Quarter Winner: Elke McGinley</span><hr class="border-1"></li>
-          <li><span style="color: blue">2nd Quarter: Karen Umland</span><hr class="border-1"></li>
-          <li><span style="color: blue">4th Quarter Winner: Karen Umland (again!)</span><hr class="border-1"></li>
-          <li><span style="color: blue">4th Quarter Winner: TBD</span><hr class="border-1"></li> 
+         <li> <span style="color: black">1st Quarter Winner: Elke McGinley</span><hr class="border-1"></li>
+          <li><span style="color: black">2nd Quarter: Karen Umland</span><hr class="border-1"></li>
+          <li><span style="color: black">4th Quarter Winner: Karen Umland (again!)</span><hr class="border-1"></li>
+          <li><span style="color: black">4th Quarter Winner: TBD</span><hr class="border-1"></li> 
         </ul> 
         </div>
       -->
