--- a/answers.html
+++ b/answers.html
@@ -91,7 +91,7 @@
      <hr class="border-1"></p>
      
       <p class="question">10. How many points will be scored in the first half of the game?</p> 
-      <p class="answer"><b>a.</b> 23 points or less (4 points)<br><b>b.</b> More than 23 points (4 points)</p>
+      <p class="answer"><span style="background-color: lightgreen"><b>a.</b> 23 points or less (4 points)</span><br><b>b.</b> More than 23 points (4 points)</p>
       <hr class="border-1"></p>
 
       <p class="question">11. Will either team attempt a 2-point conversion, fake field goal, or fake punt?</p> 
@@ -104,7 +104,7 @@
       <hr class="border-1"></p>
  
       <p class="question">13. Will the game be tied at any point other than 0-0?</p> 
-      <p class="answer"><b>a.</b> Yes (2 points)</span><br><b>b.</b> No (3 points)</p>
+      <p class="answer"><span style="background-color: lightgreen"><b>a.</b> Yes (2 points)</span><br><b>b.</b> No (3 points)</p>
      <hr class="border-1"></p>
 
      <p class="question">14. What will be the first scoring play of the game?</p> 
