--- a/leaders.html
+++ b/leaders.html
@@ -73,6 +73,10 @@
         <div style="height:400px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font-family: sans-serif; font-size:102%; color: black; padding-left: 2%; font-weight:500; overflow:auto;"> 
         <!--  <div style="height:300px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font:16px/26px Georgia, Garamond, Serif;overflow:auto;"> --> 
           
+
+          <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 8:00 PM PST<hr class="border-1"></span>
+          Susan Howard wins Squares Q4, Mick Kirsch wins Squares in Overtime<hr class="border-1">   
+          Final results for the pool will be posted by 8:45 Pacific Time<hr class="border-1">   
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 6:40 PM PST<hr class="border-1"></span>
           Karen Umland wins the Squares Game, again, at the end of the 3rd quarter. We believe that Elke McGinley, Karen's mom, is the ringleader in the obvious hacking.<hr class="border-1">   
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 6:10 PM PST<hr class="border-1"></span>
