--- a/squares.html
+++ b/squares.html
@@ -47,7 +47,8 @@
          <li> <span style="color: black">1st Quarter Winner: Elke McGinley</span><hr class="border-1"></li>
           <li><span style="color: black">2nd Quarter: Karen Umland</span><hr class="border-1"></li>
           <li><span style="color: black">3rd Quarter Winner: Karen Umland (again!)</span><hr class="border-1"></li>
-          <li><span style="color: black">4th Quarter Winner: Susan Howard</span><hr class="border-1"></li> 
+          <li><span style="color: black">4th Quarter Winner: Susan Howard</span><hr class="border-1"></li>
+          <li><span style="color: black">Overtime Winner: Mick Kirsch</span><hr class="border-1"></li> 
         </ul> 
         </div>
       -->
