--- a/leaders.html
+++ b/leaders.html
@@ -76,7 +76,7 @@
 
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 8:00 PM PST<hr class="border-1"></span>
           Susan Howard wins Squares Q4, Brian Kiley wins Squares in Overtime<hr class="border-1">   
-          Final results for the pool will be posted by 8:45 Pacific Time<hr class="border-1">   
+          Final results for the pool will be posted by 9:00 PM Pacific Time<hr class="border-1">   
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 6:40 PM PST<hr class="border-1"></span>
           Karen Umland wins the Squares Game, again, at the end of the 3rd quarter. We believe that Elke McGinley, Karen's mom, is the ringleader in the obvious hacking.<hr class="border-1">   
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 6:10 PM PST<hr class="border-1"></span>
