--- a/leaders.html
+++ b/leaders.html
@@ -73,7 +73,14 @@
         <div style="height:400px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font-family: sans-serif; font-size:102%; color: black; padding-left: 2%; font-weight:500; overflow:auto;"> 
         <!--  <div style="height:300px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font:16px/26px Georgia, Garamond, Serif;overflow:auto;"> --> 
           
-
+          <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 9:00 PM PST<hr class="border-1"></span>
+          Our pool was closer than the final game score. Top 11 finishers separated by only 11 points<hr class="border-1">   
+          Gatorade bath was not shown on live TV. Berkeley, Auggie and Steve did not poop indoors, everyone gets credit for that one.<hr class="border-1">
+          Steve Trilling picked the final score exactly 47 points - this is no particular indication of Steve's abilities since the official over/under was 47.5 points.<hr class="border-1">
+          Top 5 Finishers: 1. Alex Umland, 2. John Kosner, 3. Warren Shoreweed, 4. Karen Umland, 5. Karen Sherwood <hr class="border-1">
+          Congratulations to the Umland, Kosner, Shoreweed, Umland, and Sherwood families!<hr class="border-1">
+          Squares Winners: Elke McGinley, Karen Umland (twice), Susan Howard, Brian Kiley - congrats to all!<hr class="border-1">
+          Thanks for joining, see you next year!<hr class="border-1">
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 8:00 PM PST<hr class="border-1"></span>
           Susan Howard wins Squares Q4, Brian Kiley wins Squares in Overtime<hr class="border-1">   
           Final results for the pool will be posted by 9:00 PM Pacific Time<hr class="border-1">   
