--- a/leaders.html
+++ b/leaders.html
@@ -50,7 +50,7 @@
       <!-- <div class="col-md-7"> -->
           
           <h1 class="center">Leader Board</h1>
-          <p class="lead" id="prizes">1st place: $100 <br> 2nd place: $80 <br> 3rd place: $40</p>
+          <p class="lead" id="prizes">1st place: $100 <br> 2nd place: $80 <br> 3rd place: $40<br> 4th place: $30<br> 5th place: $20</p>
                 
         <div class="list-center-justify">
         <ul style="font-weight:550">
