--- a/squares.html
+++ b/squares.html
@@ -40,7 +40,7 @@
       
       <h1 class="center">Super Bowl Squares</h1>
       <h2 style= "font-weight:normal; font-size:1.3em" class="center">Prizes awarded after each quarter based on last digit of each team's score</h2>
-      <p class="lead" id="prizes">1st quarter end: $20<br> 2nd quarter end: $20 <br> 3rd quarter end: $20 <br> 4th quarter end: $40</p>
+      <p class="lead" id="prizes">1st quarter end: $20<br> 2nd quarter end: $20 <br> 3rd quarter end: $20 <br> 4th quarter end: $20<br> Overtime end: $20</p>
      
       <div class="list-center-justify">
         <ul style="font-weight:bold">
