--- a/leaders.html
+++ b/leaders.html
@@ -73,6 +73,10 @@
         <div style="height:400px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font-family: sans-serif; font-size:102%; color: black; padding-left: 2%; font-weight:500; overflow:auto;"> 
         <!--  <div style="height:300px;width:100%;border:2px solid #E31837;background-color:#F0DBA6; font:16px/26px Georgia, Garamond, Serif;overflow:auto;"> --> 
           
+
+          <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 9:20 PM PST<hr class="border-1"></span>
+          Final Note: Everyone got credit for Question #18, as long as you chose one of the sentences rooting for the 49ers, EXCEPT for Jonathan Groff and "Evanne's Eye Candy", who 
+          both chose "e. Anything Else" just to be hurtful.<hr class="border-1">
           <span style="color: darkblue; font-weight:700; font-size: larger">UPDATE: 9:00 PM PST<hr class="border-1"></span>
           Our pool was closer than the final game score. Top 11 finishers separated by only 11 points<hr class="border-1">   
           Gatorade bath was not shown on live TV. Berkeley, Auggie and Steve did not poop indoors, everyone gets credit for that one.<hr class="border-1">
