--- a/answers.html
+++ b/answers.html
@@ -185,17 +185,18 @@
 
       <p class="question">30. What color Gatorade/drink will be poured over the winning coach when the game ends? (6 points unless noted)</p> 
       <p class="answer"><b>a.</b> Blue<br><b>b.</b> Orange<br><b>c.</b> Clear<br><b>d.</b> Yellow<br><b>e.</b> Green<br>
-      <b>f.</b> Red<br><b>g.</b> Purple<br><b>h.</b> Another Gatorade color<br><b>i.</b> Something other than Gatorade is poured (e.g., Barbeque Sauce, Motor Oil) (50 points)<br><b>j.</b> No pour, or pour not shown on live TV</span></p>
+      <b>f.</b> Red<br><b>g.</b> Purple<br><b>h.</b> Another Gatorade color<br><b>i.</b> Something other than Gatorade is poured (e.g., Barbeque Sauce, Motor Oil) (50 points)<br>
+      <span style="background-color: lightgreen"> <b>j.</b> No pour, or pour not shown on live TV</span></p>
       <hr class="border-1"></p>
 
       <p class="question">31. What will the final result of the game be?</p> 
       <p class="answer"><b>a.</b> 49ers cover - win by 3 or more (6 points)<br>
-      <b>a.</b> Chiefs cover - lose by 2 or less, or win outright</span><br>
-      <b>a.</b> Chiefs win outright (8 points)</p>
+      <span style="background-color: lightgreen"> <b>b.</b> Chiefs cover - lose by 2 or less, or win outright<br>
+      <b>c.</b> Chiefs win outright (8 points)</span></p>
           <hr class="border-1"></p>
 
     <p class="question">32. What will be the total number of combined points scored by both teams? (8 points for the closest guess, without going over)</p>
-    <p class="answer"><b><span style="background-color: lightgreen">XX total points in the game, XX wins!</span></b></p> 
+    <p class="answer"><span style="background-color: lightgreen">47 total points in the game</span></p> 
     
     
     <!-- EMBED GOOGLE SHEET <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQJVK6XaeYF-6d0xzjMMzmoi0kdJEdcOgadWZLV0852fXGL5_Rz09dk1LhJ0pCvOEpemMxv5R0Xh-AM/pubhtml?gid=1887211922&amp;single=true&amp;widget=true&amp;headers=false" width="75%" height="200" ></iframe> -->
