--- a/answers.html
+++ b/answers.html
@@ -72,7 +72,7 @@
       <hr class="border-1"></p>
 
       <p class="question">6. Which head coach will be shown on TV first after the opening kickoff?</p> 
-      <p class="answer"><p class="answer"><b>a.</b> Andy Reid (2 points)<br><span style="background-color: lightgreen"><b>b.</b> Mike Shanahan (2 points)</span></p>
+      <p class="answer"><p class="answer"><b>a.</b> Andy Reid (2 points)<br><span style="background-color: lightgreen"><b>b.</b> Kyle Shanahan (2 points)</span></p>
       <hr class="border-1"></p>
   
       <p class="question">7. What will be the first TV commercial after the opening kickoff? (all 4 points)</p> 
